Backend for login fragment - "Login" now requires account creation and then validation of user email address and matching password from database. Otherwise, you must proceed as a guest. "Forgot password" feature and other authentication, such as MFA, not yet implemented.

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -69,6 +69,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:id="@+id/resetPasswordButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -79,5 +80,16 @@
         android:text="@string/reset_password"
         android:backgroundTint="@color/green"
         android:textColor="@color/white"/>
+
+    <TextView
+        android:id="@+id/reset_not_available_errorTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="@color/red"
+        android:text="@string/feature_not_available"
+        android:textSize="16sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:visibility="gone" />
 
 </LinearLayout>
