--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -192,6 +192,16 @@
             android:textStyle="bold"
             tools:ignore="TextContrastCheck" />
 
+        <TextView
+            android:id="@+id/login_errorTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/red"
+            android:textSize="16sp"
+            android:visibility="gone"
+            android:layout_marginTop="10dp"
+            android:text="@string/login_failure" />
+
 
 
     </LinearLayout>
