--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -98,6 +98,8 @@
             android:textSize="16sp"
             android:visibility="gone" />
 
+       <!-- ... other views ... -->
+
         <TextView
             android:id="@+id/notification_settings"
             android:layout_width="wrap_content"
@@ -106,13 +108,14 @@
             android:textSize="18sp"
             android:layout_marginTop="5dp"/>
 
-        <TextView
+        <Button
             android:id="@+id/notification_status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This feature is not yet available"
-            android:textSize="16sp"
-            android:visibility="gone" />
+            android:text="Enable Notifications"
+            android:textSize="16sp" />
+
+<!-- ... other views ... -->
 
         <TextView
             android:id="@+id/language_settings"
