--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -104,7 +104,8 @@
             android:background="@color/white"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:layout_marginBottom="10dp">
+            android:layout_marginBottom="10dp"
+            android:visibility="gone">
 
             <ImageView
                 android:id="@+id/first_name_change_imageView"
@@ -125,21 +126,48 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
+            android:gravity="center_vertical"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
+            android:visibility="gone">
+
+            <ImageView
+                android:id="@+id/last_name_change_imageView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:src="@drawable/baseline_person_24" />
+
+            <TextView
+                android:id="@+id/last_name_change_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/last_name"
+                android:textSize="20sp" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:foregroundTint="@color/gray"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             android:layout_marginBottom="10dp">
 
             <ImageView
+                android:id="@+id/address_change_imageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="10dp"
                 android:src="@drawable/baseline_location_pin_24" />
 
             <TextView
+                android:id="@+id/address_change_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Address"
+                android:text="@string/address"
                 android:textSize="20sp" />
 
         </LinearLayout>
@@ -154,14 +182,14 @@
             android:layout_marginBottom="10dp">
 
             <ImageView
-                android:id="@+id/imageView5"
+                android:id="@+id/phone_number_change_imageView"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="10dp"
                 android:src="@drawable/baseline_phone_24" />
 
             <TextView
-                android:id="@+id/textView6"
+                android:id="@+id/phone_number_change_textView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/phone_number"
