--- a/app/src/main/res/layout/fragment_sorting_guide.xml
+++ b/app/src/main/res/layout/fragment_sorting_guide.xml
@@ -50,7 +50,7 @@
         android:background="@drawable/button_background"
         android:backgroundTint="@color/soft_gray"
         android:iconifiedByDefault="false"
-        android:queryHint="Search for an item" />
+        android:queryHint="Search for item" />
 
     <LinearLayout
         android:layout_width="match_parent"
