--- a/app/src/main/res/layout/history_item_design.xml
+++ b/app/src/main/res/layout/history_item_design.xml
@@ -3,16 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-
-    android:elevation="5dp"
     android:layout_marginBottom="10dp">
 
     <LinearLayout
+        android:id="@+id/history_item_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-        android:paddingStart="15dp"
+        android:paddingStart="14dp"
+        android:paddingEnd="5dp"
         android:orientation="horizontal">
 
         <androidx.cardview.widget.CardView
