--- a/app/src/main/res/layout/fragment_sorting_guide.xml
+++ b/app/src/main/res/layout/fragment_sorting_guide.xml
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:text="@string/most_frequent_searches"
+        android:text="@string/search_history"
         android:textAlignment="center"
         android:textSize="20sp" />
 
