--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -141,7 +141,7 @@
             android:focusable="true"
             android:gravity="center"
             android:linksClickable="true"
-            android:minHeight="48dp"
+            android:minHeight="40dp"
             android:text="@string/forgot_password_question"
             android:textColor="@color/black"
             android:textSize="11sp"
@@ -153,7 +153,8 @@
             android:layout_height="wrap_content"
             android:clickable="true"
             android:focusable="true"
-            android:minHeight="48dp"
+            android:minHeight="40dp"
+            android:gravity="center"
             android:orientation="horizontal">
 
             <TextView
@@ -182,6 +183,7 @@
             android:id="@+id/continueAsGuestLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:minHeight="40dp"
             android:clickable="true"
             android:focusable="true"
             android:gravity="center"
