--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -137,15 +137,7 @@
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Next Collection"
-        android:textSize="12sp"
-        android:textColor="@color/gray"
-        android:layout_marginStart="25dp"
-        android:layout_marginEnd="25dp"
-        android:layout_marginBottom="15dp"/>
+
 
     <LinearLayout
         android:id="@+id/scheduleList"
@@ -155,6 +147,24 @@
         android:orientation="vertical"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Next Collection"
+            android:textSize="12sp"
+            android:textColor="@color/gray"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginBottom="15dp"/>
+
+
+        <Switch
+    android:id="@+id/switch_pickup_notifications"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Enable pickup notifications"
+    android:layout_marginTop="15dp"/>
 
         <TextView
             android:id="@+id/noScheduleTV"
