--- a/app/src/main/res/layout/fragment_calendar.xml
+++ b/app/src/main/res/layout/fragment_calendar.xml
@@ -10,16 +10,11 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Schedule"
+        android:text="@string/schedule"
         android:textSize="20sp"
         android:textStyle="bold"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"/>
-
-<!--    <CalendarView-->
-<!--        android:id="@+id/calendarView"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content" />-->
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -136,18 +131,11 @@
             android:layout_height="250dp"/>
 
     </LinearLayout>
-    <Switch
-    android:id="@+id/switch_pickup_notifications"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Enable pickup notifications"
-    android:layout_marginStart="25dp"
-    android:layout_marginTop="15dp"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Next Collection"
+        android:text="@string/next_collection"
         android:textSize="12sp"
         android:textColor="@color/gray"
         android:layout_marginStart="25dp"
@@ -172,7 +160,6 @@
             android:textColor="@color/gray"
             android:gravity="center"
             android:layout_marginBottom="45dp"/>
-
 
 
     </LinearLayout>
