--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -39,8 +39,7 @@
         <FrameLayout
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginBottom="55dp"/>
+            android:layout_height="match_parent" />
 
     </LinearLayout>
 
@@ -120,11 +119,7 @@
                 android:textColor="@color/black"
                 tools:ignore="SmallSp" />
 
-
-
         </LinearLayout>
-
-
 
     </com.google.android.material.navigation.NavigationView>
 
@@ -148,7 +143,6 @@
                 android:background="@color/white"
                 app:menu="@menu/bottom_menu" />
 
-
         </com.google.android.material.bottomappbar.BottomAppBar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -162,12 +156,6 @@
             app:elevation="4dp"
             app:layout_anchor="@id/bottomAppBar" />
 
-
-
-
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-
-
 
 </androidx.drawerlayout.widget.DrawerLayout>
