suggest button will show when item is not available in the database

--- a/app/src/main/res/layout/fragment_item_information.xml
+++ b/app/src/main/res/layout/fragment_item_information.xml
@@ -123,6 +123,16 @@
 
     <Button
         style="@style/CustomButton"
+        android:id="@+id/suggestItemButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Suggest Item"
+        android:textColor="@color/white"
+        android:background="@drawable/button_press_background"
+        android:visibility="gone"/>
+
+    <Button
+        style="@style/CustomButton"
         android:id="@+id/btnReturnToSortingGuide"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
