--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    tools:context=".LoginFragment">
+    tools:context=".view.fragments.LoginFragment">
 
     <FrameLayout
         android:id="@+id/loginContainerFL"
