--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,7 +7,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:paddingStart="25dp"
     android:paddingEnd="25dp"
-    tools:context=".HistoryFragment">
+    tools:context=".view.fragments.HistoryFragment">
 
 
     <androidx.recyclerview.widget.RecyclerView
