--- a/app/src/main/res/layout/fragment_item_information.xml
+++ b/app/src/main/res/layout/fragment_item_information.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:paddingStart="25dp"
     android:paddingEnd="25dp"
-    tools:context=".ItemInformationFragment">
+    tools:context=".view.fragments.ItemInformationFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
