--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    tools:context=".RegistrationFragment">
+    tools:context=".view.fragments.RegistrationFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
