--- a/app/src/main/res/layout/fragment_terms.xml
+++ b/app/src/main/res/layout/fragment_terms.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".TermsFragment">
+    tools:context=".view.fragments.TermsFragment">
 
     <RelativeLayout
         android:layout_width="match_parent"
