--- a/app/src/main/res/layout/fragment_scanner.xml
+++ b/app/src/main/res/layout/fragment_scanner.xml
@@ -40,43 +40,83 @@
 
 
     <LinearLayout
-        android:id="@+id/bottomLayout"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:background="@color/zxing_transparent"
-        android:layout_marginBottom="25dp"
-        android:gravity="center">
+        android:orientation="vertical">
 
-        <ImageButton
-            android:id="@+id/typeBarcode"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/zxing_transparent"
-            android:contentDescription="@string/type_barcode_button"
-            android:src="@drawable/barcode_type"
-            app:tint="@color/white" />
+        <LinearLayout
+            android:id="@+id/editTextLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:background="@color/white"
+            android:gravity="center"
+            android:visibility="gone">
 
-        <ImageButton
-            android:id="@+id/guessItem"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/zxing_transparent"
-            android:contentDescription="@string/guess_item"
-            android:src="@drawable/machine_learning_icon"
-            app:tint="@color/white"
-            android:layout_marginStart="40dp"
-            android:layout_marginEnd="40dp"/>
+            <EditText
+                android:id="@+id/barcodeET"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:ems="10"
+                android:inputType="text"
+                android:autofillHints=""
+                android:hint=""
+                android:gravity="center" />
 
-        <ImageButton
-            android:id="@+id/flashLight"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/zxing_transparent"
-            android:contentDescription="@string/flash_on_and_off_button"
-            android:src="@drawable/baseline_flash_on_24"
-            app:tint="@color/white" />
+            <Button
+                android:id="@+id/doneButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/done"
+                android:backgroundTint="@color/white"
+                android:textColor="@color/dark_green"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp" />
 
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:id="@+id/bottomButtonsLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="25dp">
+
+            <ImageButton
+                android:id="@+id/typeBarcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/zxing_transparent"
+                android:contentDescription="@string/type_barcode_button"
+                android:src="@drawable/barcode_type"
+                app:tint="@color/white" />
+
+            <ImageButton
+                android:id="@+id/guessItem"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/zxing_transparent"
+                android:contentDescription="@string/guess_item"
+                android:src="@drawable/machine_learning_icon"
+                app:tint="@color/white"
+                android:layout_marginStart="40dp"
+                android:layout_marginEnd="40dp"/>
+
+            <ImageButton
+                android:id="@+id/flashLight"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:backgroundTint="@color/zxing_transparent"
+                android:contentDescription="@string/flash_on_and_off_button"
+                android:src="@drawable/baseline_flash_on_24"
+                app:tint="@color/white" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
