--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -23,7 +23,7 @@
             android:src="@drawable/water_bottle"
             tools:layout_editor_absoluteX="29dp"
             tools:layout_editor_absoluteY="50dp"
-            android:contentDescription="Item Image" />
+            android:contentDescription="@string/item_image" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -65,7 +65,7 @@
             tools:layout_editor_absoluteX="301dp"
             tools:layout_editor_absoluteY="58dp"
             app:tint="@color/white"
-            android:contentDescription="Open Button" />
+            android:contentDescription="@string/open_button" />
 
     </LinearLayout>
 
